[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/settings/settings.gd" type="Script" id=2]
[ext_resource path="res://menus/check_box.png" type="Texture" id=3]
[ext_resource path="res://menus/check_box_checked.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Settings" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -25.0
margin_right = 138.5
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 277.0
margin_bottom = 24.0

[node name="FullscreenButton" parent="VBoxContainer/FullscreenContainer" instance=ExtResource( 1 )]
margin_right = 249.0
margin_bottom = 24.0
text = "Fullscreen mode"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/FullscreenContainer"]
margin_left = 253.0
margin_right = 277.0
margin_bottom = 24.0
custom_icons/checked = ExtResource( 4 )
custom_icons/unchecked = ExtResource( 3 )
custom_styles/focus = SubResource( 1 )

[node name="BackButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 28.0
margin_right = 277.0
margin_bottom = 50.0
text = "Back"
[connection signal="pressed" from="VBoxContainer/FullscreenContainer/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/FullscreenContainer/CheckBox" to="." method="_on_FullscreenCheckBox_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
